app.yaml
---
# Source: helm-openresty/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helm-openresty
  labels:
    helm.sh/chart: helm-openresty-0.1.0
    app.kubernetes.io/name: helm-openresty
    app.kubernetes.io/instance: helm-openresty
    app.kubernetes.io/version: "1.19.9.1-4-centos-rpm"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: helm-openresty
    app.kubernetes.io/instance: helm-openresty
---
# Source: helm-openresty/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: helm-openresty
  labels:
    helm.sh/chart: helm-openresty-0.1.0
    app.kubernetes.io/name: helm-openresty
    app.kubernetes.io/instance: helm-openresty
    app.kubernetes.io/version: "1.19.9.1-4-centos-rpm"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: helm-openresty
      app.kubernetes.io/instance: helm-openresty
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helm-openresty
        app.kubernetes.io/instance: helm-openresty
    spec:
      containers:
        - name: helm-openresty
          image: "openresty/openresty:1.19.9.1-4-centos-rpm"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
          limits:
            cpu: "0.2"
            memory: 400Mi
          requests:
            cpu: "0.1"
            memory: 200Mi
          volumeMounts:
            - name: config
              mountPath: /usr/local/openresty/nginx/html/
      volumes:
        - name: config
          configMap:
            name: helm-openresty-cm
---
# Source: helm-openresty/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-openresty
  labels:
    helm.sh/chart: helm-openresty-0.1.0
    app.kubernetes.io/name: helm-openresty
    app.kubernetes.io/instance: helm-openresty
    app.kubernetes.io/version: "1.19.9.1-4-centos-rpm"
    app.kubernetes.io/managed-by: Helm
  annotations:
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  ingressClassName: system-ingress
  tls:
    - hosts:
        - "openresty"
      secretName: openresty-tls
  rules:
    - host: "openresty.dot.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-openresty-svc
                port:
                  number: 80
